--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </div>
     </div>
     <div id="curtain"></div>
-    <div id="alert-box">AlertBox</div>
+    <div id="alert-box"></div>
   </div>
   <script src="./js/script.js" type="text/javascript">
 </body>
